# revenue-recovery

./: README.md  pyproject.toml
.axentx-dev-bot/: 20260622-055415-revenue-recovery-docs-6a10f3a8.md  20260622-155304-revenue-recovery-docs-a0d7c367.md  20260626-214325-revenue-recovery-docs-50eca936.md  20260626-215201-revenue-recovery-docs-ef3def2d.md
axentx_product/: __init__.py
business/: breakeven.md  business-model-canvas.md  customer-journey.md  dataflow.md  marketing-plan.md  partner-targets.md  tech-spec.md  user-stories.md
docs/: BMC.md  PRD.md  REQUIREMENTS.md  ROADMAP.md  STORIES.md  TECH_SPEC.md
src/: connectors.py  dunning_emails.py  email_generator.py  paypal_connector.py  personalized_dunning_email_generator.py  stripe_sdk.py
tests/: test_basic.py  test_connectors.py  test_dunning_emails.py  test_email_generator.py  test_paypal_connector.py  test_personalized_dunning_email_generator.py  test_stripe_sdk.py
