[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "axentx-product"
version = "0.1.0"
description = "A minimal example package for Axentx product validation."
authors = [{name = "Axentx Team", email = "team@axentx.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
